Devanshi_eflowScenarios_update

--- a/eflow-G3-script-translation/Translation-SK.Rmd
+++ b/eflow-G3-script-translation/Translation-SK.Rmd
@@ -64,6 +64,22 @@ damhei <- 100 #(m)
 power <- 0.1 * 10^6 #(MW)
 ```
 
+```{r eruptions, echo=FALSE}
+inputPanel(
+  selectInput("i_efty", label = "i_efty",
+              choices = c(1,2,3), selected = 2),
+  selectInput("i_mvef", label = "i_mvef",
+              choices = c(1,2,3), selected = 2),
+)
+
+renderPlot({
+  hist(faithful$eruptions, probability = TRUE, breaks = as.numeric(input$n_breaks),
+       xlab = "Duration (minutes)", main = "Geyser eruption duration")
+  
+  dens <- density(faithful$eruptions, adjust = input$bw_adjust)
+  lines(dens, col = "blue")
+})
+```
 
 ### Pre-processing of inflows and downstream water uses ####
 Here we organize the variables so that it's easier to use in the future. Now we have the day month and year as separate variables
@@ -108,28 +124,14 @@ q97 <- q_tt %>% summarise(ninetyseventh_percentile = quantile(Monthly_flow, 0.03
 ``` {r}
 qefm <-vector("numeric", 1)
 LIHflo <- vector("numeric", 1)
-```
 
-```{r eruptions, echo=FALSE}
-inputPanel(
-  selectInput("i_efty", label = "i_efty",
-              choices = c(1,2,3), selected = 2),
-  selectInput("i_mvef", label = "i_mvef",
-              choices = c(1,2,3, 4, 5), selected = 1),
-  selectInput("icons", label = "icons",
-              choices = c(0,1), selected = 1),
-)
-```
-
-``` {r}
-
-if (input$i_efty==1){ #case 1:constant eflow throughout the whole year
+if (i_efty==1){ #case 1:constant eflow throughout the whole year
   
   qefm <- rep(q90, 12)
  
-   } else if (input$i_efty==2){ #case 2: variable eflow on a monthly basis
+   } else if (i_efty==2){ #case 2: variable eflow on a monthly basis
   
-      if (input$i_mvef==1){                       # ----------------- VMF (2014)
+      if (i_mvef==1){                       # ----------------- VMF (2014)
         for (i in 1:nrow(MMF)) {
           if (MMF[i, 2] <= 0.4*MAF) {
             qefm[i] <- (0.6*MAF)
@@ -143,7 +145,7 @@ if (input$i_efty==1){ #case 1:constant eflow throughout the whole year
               }
           }
         } 
-     else if (input$i_mvef==2){                   # --------------- Tessmann (1980)
+     else if (i_mvef==2){                   # --------------- Tessmann (1980)
        for (i in 1:nrow(MMF)) {
         if (MMF[i, 2] <= 0.4*MAF) {
          qefm[i] <- as.numeric(MMF[i, 2]) #sk:see note above
@@ -157,7 +159,7 @@ if (input$i_efty==1){ #case 1:constant eflow throughout the whole year
       }
     } 
   } 
-     else if (input$i_mvef==3) {                  #--------------- Smakhtin et al. (2004b)
+     else if (i_mvef==3) {                  #--------------- Smakhtin et al. (2004b)
        for (i in 1:nrow(MMF)) {
          if (MMF[i, 2] <= MAF) {
          qefm[i] <- q90[[1]] #sk:also for quantile data, instead of as.numeric, I just indicated the data to extract, need to test later on
@@ -168,7 +170,7 @@ if (input$i_efty==1){ #case 1:constant eflow throughout the whole year
       }
     } 
   } 
-     else if (input$i_mvef==4) {                 #--------------- Tennant (1976)
+     else if (i_mvef==4) {                 #--------------- Tennant (1976)
       for (i in 1:nrow(MMF)) {
        if (MMF[i, 2] <= MAF) {
         qefm[i] <- 0.2*MAF
@@ -179,7 +181,7 @@ if (input$i_efty==1){ #case 1:constant eflow throughout the whole year
       }
     } 
   } 
-     else if (input$i_mvef==5) {                 #--------------- Q90-Q50 (2014)
+     else if (i_mvef==5) {                 #--------------- Q90-Q50 (2014)
       for (i in 1:nrow(MMF)) {
        if (MMF[i, 2] <= MAF) {
         qefm[i] <-q90[[1]]
@@ -243,8 +245,8 @@ dt <- 86400                          # seconds in a day
 The dam operation 
 ```` {r}
 for (i in 1:(nq-1)){
-  qdown[i] <- qspill[i]+input$icons*qef[i]+(1-input$icons)*max(qef[i], qncons[i])
-  qout[i] <- qdown[i]+input$icons*qcons[i]
+  qdown[i] <- qspill[i]+icons*qef[i]+(1-icons)*max(qef[i], qncons[i])
+  qout[i] <- qdown[i]+icons*qcons[i]
   qnet[i] <- q_tt[["Monthly_flow"]][[i]]-qout[i]
   rvol[i+1] <- rvol[i]+qnet[i]*dt
   if (rvol[i]>rvmax){
