--- a/eflow-G3-script-translation/Translation-SK.Rmd
+++ b/eflow-G3-script-translation/Translation-SK.Rmd
@@ -31,7 +31,7 @@ Chose the eflow method that you want to apply by setting i_efty to;
 * 3: for proportional input
 
 ```{r}
- i_efty <- 2
+ i_efty <- 1
 
 
 ```
@@ -64,22 +64,6 @@ damhei <- 100 #(m)
 power <- 0.1 * 10^6 #(MW)
 ```
 
-```{r eruptions, echo=FALSE}
-inputPanel(
-  selectInput("i_efty", label = "i_efty",
-              choices = c(1,2,3), selected = 2),
-  selectInput("i_mvef", label = "i_mvef",
-              choices = c(1,2,3), selected = 2),
-)
-
-renderPlot({
-  hist(faithful$eruptions, probability = TRUE, breaks = as.numeric(input$n_breaks),
-       xlab = "Duration (minutes)", main = "Geyser eruption duration")
-  
-  dens <- density(faithful$eruptions, adjust = input$bw_adjust)
-  lines(dens, col = "blue")
-})
-```
 
 ### Pre-processing of inflows and downstream water uses ####
 Here we organize the variables so that it's easier to use in the future. Now we have the day month and year as separate variables
@@ -122,86 +106,92 @@ q97 <- q_tt %>% summarise(ninetyseventh_percentile = quantile(Monthly_flow, 0.03
 ### Eflow scenarios ####
 
 ``` {r}
-qefm <-vector("numeric", 1)
-LIHflo <- vector("numeric", 1)
+qefm <-vector("numeric", 12)
+LIHflo <- vector("numeric", 12)
+```
 
+
+``` {r}
 if (i_efty==1){ #case 1:constant eflow throughout the whole year
   
-  qefm <- rep(q90, 12)
- 
-   } else if (i_efty==2){ #case 2: variable eflow on a monthly basis
+  qefm <- as.numeric(rep(q90, 12))
   
-      if (i_mvef==1){                       # ----------------- VMF (2014)
-        for (i in 1:nrow(MMF)) {
-          if (MMF[i, 2] <= 0.4*MAF) {
-            qefm[i] <- (0.6*MAF)
-            LIHflo[i] <- 1    #i denotes a low flow month
-            } else if(MMF[i, 2] > 0.4*MAF && MMF[i, 2] <= 0.8*MAF) {
-              qefm[i] <- as.numeric(0.45*MMF[i, 2]) #SK:I added as.numeric() here, otherwise it produces a list of different classes. There might be a more efficient solution like structruing the lists from the begining, but for now this works ok. 
-              LIHflo[i] <- 2    #i denotes an intermediate flow month
-              } else {
-                qefm[i] <-(0.3*MAF)
-                LIHflo[i] <- 3 #i denotes a high flow month
-              }
-          }
-        } 
-     else if (i_mvef==2){                   # --------------- Tessmann (1980)
-       for (i in 1:nrow(MMF)) {
-        if (MMF[i, 2] <= 0.4*MAF) {
-         qefm[i] <- as.numeric(MMF[i, 2]) #sk:see note above
-         LIHflo[i] <- 1 #i denotes a low flow month
-         } else if(MMF[i, 2] > 0.4*MAF && 0.4*MMF[i, 2] <= 0.4*MAF) {
-           qefm[i] <- 0.4*MAF
-           LIHflo[i] <- 2 #i denotes an intermediate flow month
-           } else {
-             qefm[i] <- 0.4*MAF
-             LIHflo[i] <- 3 #i denotes a high flow month
+} else if (i_efty==2){ #case 2: variable eflow on a monthly basis
+  
+  if (i_mvef==1){         # --------------- VMF (2014)
+    for (i in 1:nrow(MMF)) {
+      if (MMF[i, 2] <= 0.4*MAF) {
+        qefm[i] <- (0.6*MAF)
+        LIHflo[i] <- 1    #i denotes a low flow month
+      } else if(MMF[i, 2] > 0.4*MAF && MMF[i, 2] <= 0.8*MAF) {
+        qefm[i] <- as.numeric(0.45*MMF[i, 2]) #SK:I added as.numeric() here, otherwise it produces a list of different classes. There might be a more efficient solution like structruing the lists from the begining, but for now this works ok. 
+        LIHflo[i] <- 2    #i denotes an intermediate flow month
+      } else {
+        qefm[i] <-(0.3*MAF)
+        LIHflo[i] <- 3 #i denotes a high flow month
+      }
+    }
+  } 
+  else if (i_mvef==2){ # --------------- Tessmann (1980)
+    for (i in 1:nrow(MMF)) {
+      if (MMF[i, 2] <= 0.4*MAF) {
+        qefm[i] <- as.numeric(MMF[i, 2]) #sk:see note above
+        LIHflo[i] <- 1 #i denotes a low flow month
+      } else if(MMF[i, 2] > 0.4*MAF && 0.4*MMF[i, 2] <= 0.4*MAF) {
+        qefm[i] <- 0.4*MAF
+        LIHflo[i] <- 2 #i denotes an intermediate flow month
+      } else {
+        qefm[i] <- 0.4*MAF
+        LIHflo[i] <- 3 #i denotes a high flow month
       }
     } 
   } 
-     else if (i_mvef==3) {                  #--------------- Smakhtin et al. (2004b)
-       for (i in 1:nrow(MMF)) {
-         if (MMF[i, 2] <= MAF) {
-         qefm[i] <- q90[[1]] #sk:also for quantile data, instead of as.numeric, I just indicated the data to extract, need to test later on
-         LIHflo[i] <- 1 #i denotes a low flow month
-         } else {
-           qefm[i] <- 0.2*MAF # check this rule
-           LIHflo[i] <- 3 #i denotes a high flow month
+  else if (i_mvef==3) { #--------------- Smakhtin et al. (2004b)
+    for (i in 1:nrow(MMF)) {
+      if (MMF[i, 2] <= MAF) {
+        qefm[i] <- q90[[1]] #sk:also for quantile data, instead of as.numeric, I just indicated the data to extract, need to test later on
+        LIHflo[i] <- 1 #i denotes a low flow month
+      } else {
+        qefm[i] <- 0.2*MAF # check this rule
+        LIHflo[i] <- 3 #i denotes a high flow month
       }
     } 
   } 
-     else if (i_mvef==4) {                 #--------------- Tennant (1976)
-      for (i in 1:nrow(MMF)) {
-       if (MMF[i, 2] <= MAF) {
+  else if (i_mvef==4) { #--------------- Tennant (1976)
+    for (i in 1:nrow(MMF)) {
+      if (MMF[i, 2] <= MAF) {
         qefm[i] <- 0.2*MAF
         LIHflo[i] <- 1 #i denotes a low flow month
-        } else {
-         qefm[i] <- 0.4*MAF
-         LIHflo[i] <- 3 #i denotes a high flow month
+      } else {
+        qefm[i] <- 0.4*MAF
+        LIHflo[i] <- 3 #i denotes a high flow month
       }
     } 
   } 
-     else if (i_mvef==5) {                 #--------------- Q90-Q50 (2014)
-      for (i in 1:nrow(MMF)) {
-       if (MMF[i, 2] <= MAF) {
+  else if (i_mvef==5) { #--------------- Q90-Q50 (2014)
+    for (i in 1:nrow(MMF)) {
+      if (MMF[i, 2] <= MAF) {
         qefm[i] <-q90[[1]]
         LIHflo[i] <- 1 #i denotes a low flow month
-        } else {
-         qefm[i] <- q50[[1]]
-         LIHflo[i] <- 3 #i denotes a high flow month
+      } else {
+        qefm[i] <- q50[[1]]
+        LIHflo[i] <- 3 #i denotes a high flow month
       }
     }
   }
 } else { #case 3
   #---------------- eflow proportional to the incoming flow -----------
-   for (i in 1:nrow(MMF)) {
+  for (i in 1:nrow(MMF)) {
     if (MMF[i,2] < MAF) {
       qefm[i] <- q90[[1]]
-      } else {
-       qefm[i] <- q50[[1]]
+      LIHflo[i] <- 1        #i denotes a low flow month
+    } else {
+      qefm[i] <- q50[[1]]
+      LIHflo[i] <- 3        #i denotes a high flow month
     }
   }
 }
+
 ```
 
 ###### Conversion of monthly data to daily data
@@ -243,8 +233,9 @@ dt <- 86400                          # seconds in a day
 ```
 
 The dam operation 
-```` {r}
+``` {r}
 for (i in 1:(nq-1)){
+  for (i in 1:(nq-1)){
   qdown[i] <- qspill[i]+icons*qef[i]+(1-icons)*max(qef[i], qncons[i])
   qout[i] <- qdown[i]+icons*qcons[i]
   qnet[i] <- q_tt[["Monthly_flow"]][[i]]-qout[i]
@@ -253,11 +244,12 @@ for (i in 1:(nq-1)){
     qspill[i+1] <- rvol[i]-rvmax
     rvol[i] <- rvmax
   } else if (rvol[i]<rvmin){
-    unmdem <- unmdem+qcons[i]+qncons[i]      # total unmet demand (consumpt + non consumpt)
-    unmdays <- unmdays+1                     # n. of days in which demand is unmet 
+    unmdem <- unmdem+qcons[i]+qncons[i]   # total unmet demand (consumpt + non consumpt)
+    unmdays <- unmdays+1                  # n. of days in which demand is unmet 
     qncons[i] <- 0
     qcons[i] <- 0
     rvol[i] <- rvmin
+  }
   }
 }
 ```
